<resources>
    <string name="app_name">TestApp</string>
    <string name="hello_splash_fragment">SPLASH FRAGMENT</string>
    <string name="fragment_number_1">1</string>
    <string name="next_fragment_button">Next fragment</string>
    <string name="fragment_number_2">2</string>
    <string name="go_to_finish_button">Go to finish</string>
    <string name="fragment_a">A</string>
    <string name="go_to_menu_button">Go to menu</string>
    <string name="do_not_keep_activity_explanation">Please, enable \"Don\'t keep activities\" in phone settings if you haven\'t done that already</string>
    <string name="put_the_app_in_the_background">Put the app in the background.</string>
    <string name="click_the_home_button">(click Home button / put app in recent apps)</string>
</resources>