<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentA">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="112dp"
        android:text="@string/put_the_app_in_the_background"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="288dp"
        android:text="@string/click_the_home_button"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary_variant"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="450dp"
        android:text="@string/fragment_a"
        android:textSize="100sp" />

    <Button
        android:id="@+id/buttonGoToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="600dp"
        android:text="@string/go_to_menu_button" />

</FrameLayout>